Updated var names.

--- a/example.env
+++ b/example.env
@@ -1,6 +1,6 @@
-OPENAI_KEY=
-COHERE_KEY=
-GOOSEAI_KEY=
-GPTJ_KEY=
+OPENAI_API_KEY=
+COHERE_API_KEY=
+GOOSEAI_API_KEY=
+GPTJ_API_KEY=
 LABELSTUDIO_ENDPOINT=
 LABELSTUDIO_API_TOKEN=
